<resources>
    <string name="app_name">即刻流量</string>

    <item name="tag_view" type="id"></item>
    <item name="tag_screenshot_index" type="id"></item>
    <item name="tag_activity" type="id"></item>

    <string name="start">即刻开始</string>

    <string name="tab_home">首页</string>
    <string name="tab_device">设备</string>
    <string name="tab_order">订单</string>
    <string name="tab_mine">我的</string>
    <string name="comment_opinion_text_count">%d/25</string>
    <string name="feedback_content_text_count">%d/240</string>

    <string name="posted_feedback">感谢您的宝贵建议！</string>
    <string name="feedback_post_suc">您的建议提交成功，我们会尽快处理！</string>
    <string name="feedback_post_fail">意见提交失败，稍后再试试吧</string>

    <string name="list_loading_normal">加载中...</string>
    <string name="list_loading_neterror">网络异常，请稍后再试！</string>
    <string name="list_loading_dataerror">暂无数据,点击重试</string>

    <item name="tag_item" type="id"></item>
    <item name="clear_task_tag_view" type="id"></item>
    <item name="tag_viewholder" type="id"></item>
    <item name="tag_fileinfo" type="id"></item>
    <item name="subjectmore_view" type="id"></item>
    <item name="subjectmore_tag_viewinfo" type="id"></item>
    <item name="subjectmore_tag_subjectinfo" type="id"></item>
    <item name="selected_view" type="id" />
    <item name="checkbox_tag_checked" type="id" />
    <item name="checkbox_tag_file" type="id" />
    <item name="tag_app_size" type="id" />

    <string name="btn_later">稍后</string>
    <string name="btn_update_rightnow">升级</string>
    <string name="dialog_title_update">发现新版本</string>
    <string name="update_new_version">最新版本：%s</string>
    <string name="selfupdate_push_message">版本：v%1$s -> v%2$s</string>
    <string name="self_update_remind">发现新版本!</string>
    <string name="btn_reload">刷新</string>
    <string name="contact_way">请填写您的联系方式！</string>
    <string name="input_ok_contact_way">请填写正确的联系方式！</string>
    <string name="input_question_type">请选择您的问题类型！</string>
    <string name="input_opinion">请填写您的意见或者建议！</string>
    <string name="title_contact">联系方式</string>
    <string name="advise_et_hint">您的手机/邮箱</string>
    <string name="problem_description">意见描述</string>
    <string name="question_type">请选择问题类型</string>
    <string name="btn_submit">提交反馈</string>
    <string name="no_content">请求失败！</string>
    <string name="netstate_unconnect">网络未连接</string>
    <string name="netstate_mobile">您正在使用数据流量</string>
    <string name="prompt_exit_app">再按一次退出程序</string>
    <string name="list_end"></string>
    <string name="crash_message">程序遇到了不可预计的错误，即将关闭!</string>

    <string name="btn_more">更多</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>
    <string name="btn_delete">删除</string>

    <string name="order_detail_title">订单详情</string>
    <string name="order_id">订单号码 ：%s</string>
    <string name="order_time">订购时间 ：%s</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_paynow">立即支付</string>
    <string name="order_pay_apliy">支付宝</string>
    <string name="order_pay_wx">微信</string>
    <string name="success_pay">恭喜</string>
    <string name="error_pay">很遗憾</string>
    <string name="error_pay_result">支付失败</string>
    <string name="success_pay_msg" formatted="false">您已成功为[%s]\n购买了%s\n%s</string>
    <string name="error_pay_msg">您本次支付失败\n请重新支付</string>
    <string name="order_detail">查看详情</string>
    <string name="go_sorder_detail">查看订单</string>
    <string name="order_state_timer" formatted="false">%s分%s秒后订单自动取消</string>
    <string name="order_price">￥ %s</string>
    <string name="order_status_success">订购成功</string>
    <string name="order_status_notpay">待支付</string>

    <string name="order_pay_year">%s年</string>
    <string name="order_pay_month">%d个月</string>
    <string name="success_delete_order">取消成功</string>
    <string name="error_delete_order">取消失败</string>

    <string name="device_delete">是否删除 %s ?</string>
    <string name="device_add_tip" formatted="false">%s\n%s\n%s</string>
    <string name="device_detail">设备详情</string>
    <string name="device_name">设备名称 ：%s</string>
    <string name="device_model">设备型号 ：%s</string>
    <string name="device_code">设备号码 ：%s</string>
    <string name="device_protect_date">保修日期 ：</string>
    <string name="device_customer">设备客服 ：%s</string>
    <string name="device_tc_traffic">套餐流量 ：</string>
    <string name="device_by_traffic">本月流量 ：</string>
    <string name="device_traffic_service">流量服务 ：</string>
    <string name="device_usemethod">使用说明</string>
    <string name="device_purchase_protect">购买续保</string>
    <string name="device_purchase_tc_traffic">购买套餐</string>
    <string name="device_purchase_jyb_traffic">购买加油包</string>
    <string name="device_purchase_traffic_service">服务续费</string>
    <string name="device_detail_nickname_hint">请输入设备名称</string>
    <string name="device_detail_nickname_empty">设备名称不能为空</string>
    <string name="device_state_using">使用中</string>
    <string name="device_state_disable">已停用</string>

    <string name="home_device_state">设备状态</string>
    <string name="home_device_traffic_title">流量服务有效期\n%s</string>
    <string name="year">%d年</string>
    <string name="month">%d月</string>
    <string name="tc_traffic">套餐流量：%s</string>
    <string name="jyb_traffic">加油包流量：%s</string>
    <string name="yy_traffic">已用流量：%s</string>
    <string name="sy_traffic">剩余流量：%s</string>
    <string name="device_detail_sy_traffic">剩余流量：%s/1G\n请及时加油</string>
    <string name="device_detail_tc_traffic_etime">截止日期：%s</string>
    <string name="device_detail_llfw_traffic_etime" formatted="false">剩余%s天\n截止日期：%s</string>
    <string name="purchase_traffic">购买流量</string>
    <string name="purchase_traffic_2g">购买流量服务</string>
    <string name="purchase_tc_traffic">购买套餐</string>
    <string name="purchase_jyb_traffic">购买加油包</string>
    <string name="purchase_service">购买服务</string>
    <string name="purchase_traffic_tip">您的流量将在本月底用完\n为保证您的正常使用\n立即订购吧</string>
    <string name="purchase_traffic_2g_tip">您的流量服务将在本月暂停\n为保证您的正常使用\n及时续购吧</string>
    <string name="purchase_traffic_auth_title">实名认证</string>
    <string name="purchase_traffic_auth_start">立即认证</string>
    <string name="purchase_traffic_auth">您尚未进行实名认证\n为保障您的正常使用\n立即认证吧</string>

    <string name="pay_traffic_protect_title">官方续保服务</string>
    <string name="pay_traffic_tc_title">%sM/月流量套餐</string>
    <string name="pay_traffic_tc_desc">有效期至%s</string>
    <string name="pay_traffic_jyb_title">%sM加油包套餐</string>
    <string name="pay_traffic_jyb_desc">当月有效</string>
    <string name="pay_traffic_llfw_title">无限流量服务费</string>
    <string name="pay_traffic_llfw_desc">有效期至%s</string>


    <string name="mine_nickname">用户昵称</string>
    <string name="mine_nickname_hint">请输入新昵称</string>
    <string name="error_nickname_empty">昵称不能为空</string>
    <string name="mine_question">常见问题</string>
    <string name="mine_question_num">010-01021222</string>
    <string name="mine_customer">客服电话</string>
    <string name="mine_customer_call">拨打</string>
    <string name="mine_customer_num">010-01021222</string>
    <string name="mine_feedback">意见反馈</string>
    <string name="success_feedback">提交成功</string>
    <string name="error_feedback">提交失败</string>
    <string name="mine_feedback_desc">感谢反馈, 我们会尽快处理</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_exit">注销</string>
    <string name="mine_about_compay">北京树米网络科技有限公司</string>
    <string name="mine_about_engilsh">Beijing Showmac Technology Co.Ltd</string>
    <string name="mine_about_version">当前版本 v1.0</string>

    <string name="success_add_device">设备添加成功</string>
    <string name="success_delete_device">删除成功</string>
    <string name="error_delete_device">删除失败</string>
    <string name="success_modify">修改成功</string>
    <string name="error_modify">修改失败</string>
    <string name="success_modify_icon">修改成功</string>
    <string name="error_modify_icon">修改失败</string>
    <string name="error_modify_uploading">头像中，请稍后</string>

    <string name="login">登录</string>
    <string name="forgetpassword">忘记密码?</string>
    <string name="registernew">新用户注册</string>
    <string name="mobile_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="repassword_hint">请再次输入密码</string>

    <string name="register">注册</string>
    <string name="complete">完成</string>
    <string name="getcode">获取验证码</string>
    <string name="getcode_again">%ss</string>
    <string name="password_hint_register">请输入8-12位数字或字母组合</string>
    <string name="sendcode_hint">请输入验证码</string>
    <string name="error_sendcode_empty">验证码不能为空,请重新输入</string>
    <string name="error_sendcode">验证码输入错误,请重新输入</string>


    <string name="reset">重置密码</string>
    <string name="reset_title">找回密码</string>

    <string name="error_mobile_empty">手机号码不能为空</string>
    <string name="error_password_empty">密码不能为空</string>
    <string name="error_mobile_format">请输入正确的手机号</string>
    <string name="error_password_short">密码为8-12位数字或字母组合</string>
    <string name="error_repassword_empty">确认密码不能为空, 请重新输入</string>
    <string name="error_repassword_different">两次密码输入内容不同, 请重新输入</string>
    <string name="success_code_sent">验证码已发送</string>
    <string name="fail_code_sent">验证码发送失败</string>
    <string name="success_login">登录成功</string>
    <string name="fail_login">登录失败</string>
    <string name="success_register">注册成功</string>
    <string name="fail_register">注册失败</string>
    <string name="success_reset">重置成功</string>
    <string name="fail_reset">重置失败</string>
    <string name="success_reset_title">重置密码成功</string>
    <string name="success_exit">注销成功</string>

    <!-- 微信支付 -->

    <string name="launch_from_wx">Launch From Weixin</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>


    <string name="errcode_nomethod">接口不存在</string> 
    <string name="errcode_params">参数缺失</string>
     <string name="errcode_params_format">参数格式错误</string>
     <string name="errcode_database">数据库执行错误</string> 
    <string name="errcode_account">账号/密码错误</string> 
    <string name="errcode_noobject">操作对象不存在</string> 
    <string name="errcode_invalidcode">验证码错误</string> 
    <string name="errcode_invalidcode_timeout">验证码超时</string> 
    <string name="errcode_password_same">新密码和原密码一样</string> 
    <string name="errcode_account_exist">注册账号已经存在</string> 
    <string name="errcode_invalidcode_times">超过次数</string> 
    <string name="errcode_sign">签名错误</string> 
    <string name="errcode_nologin">用户没有登陆</string>
    <string name="clip">图片裁剪</string>


</resources>
