<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        style="@style/MWidget.TextView.LoginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/reset_title" />

    <LinearLayout
        android:id="@+id/layout_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tip"
            style="@style/MWidget.TextView.AppSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

        <ImageView
            android:id="@+id/ivtip"
            android:layout_width="12dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_warnning"
            android:layout_marginLeft="3dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_mobile"
        style="@style/MWidget.TextView.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/layout_tip"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:hint="@string/mobile_hint"
        android:inputType="phone"
        android:maxLength="11" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/et_mobile"
        android:layout_alignRight="@+id/et_mobile"
        android:layout_below="@+id/et_mobile"
        android:background="@color/divide"></View>

    <EditText
        android:id="@+id/et_code"
        style="@style/MWidget.TextView.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/line1"
        android:layout_below="@+id/line1"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_toLeftOf="@+id/sendcode"
        android:background="@null"
        android:maxLength="6"
        android:hint="@string/sendcode_hint"
        android:inputType="number" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignBottom="@+id/et_code"
        android:layout_alignLeft="@+id/et_code"
        android:layout_alignRight="@+id/et_code"
        android:background="@color/divide"></View>

    <TextView
        android:id="@+id/sendcode"
        style="@style/MWidget.TextView.Button.Sendcode"
        android:layout_alignBottom="@+id/et_code"
        android:layout_alignRight="@+id/line1"
        android:layout_alignTop="@+id/et_code"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:maxLength="4"
        android:text="@string/getcode" />

    <TextView
        android:id="@+id/reset"
        style="@style/MWidget.TextView.Button.Login"
        android:layout_width="@dimen/bg_button_reset_width"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/reset" />

    <include layout="@layout/layout_toolbar_custom_mine"></include>

</RelativeLayout>
