<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/title"
        style="@style/MWidget.TextView.LoginTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="116dp"
        android:text="@string/reset" />

    <LinearLayout
        android:id="@+id/layout_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tip"
            style="@style/MWidget.TextView.AppSummary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />

        <ImageView
            android:id="@+id/ivtip"
            android:layout_width="12dp"
            android:layout_height="10dp"
            android:src="@drawable/ic_warnning"
            android:layout_marginLeft="3dp"/>

    </LinearLayout>

    <EditText
        android:id="@+id/et_password"
        style="@style/MWidget.TextView.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/layout_tip"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="60dp"
        android:background="@null"
        android:hint="@string/password_hint_register"
        android:maxLength="12"
        android:inputType="textPassword"/>


    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/et_password"
        android:layout_alignRight="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:background="@color/divide"></View>

    <EditText
        android:id="@+id/et_repassword"
        style="@style/MWidget.TextView.EditText"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/line1"
        android:layout_alignRight="@+id/line1"
        android:layout_below="@+id/line1"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:hint="@string/repassword_hint"
        android:maxLength="12"
        android:inputType="textPassword"/>

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignLeft="@+id/et_repassword"
        android:layout_alignRight="@+id/et_repassword"
        android:layout_below="@+id/et_repassword"
        android:background="@color/divide"
        android:maxLength="6"></View>

    <TextView
        android:id="@+id/reset"
        style="@style/MWidget.TextView.Button.Login"
        android:layout_below="@+id/line2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:text="@string/complete" />

    <include layout="@layout/layout_toolbar_custom_mine"></include>

</RelativeLayout>
