<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/actionBarSize">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="59dp"
            android:layout_height="105dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_logo"
            android:layout_marginTop="60dp"/>

        <TextView
            android:id="@+id/version"
            style="@style/MWidget.TextView.BlackSummary"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/logo"
            android:text="@string/mine_about_version" />

        <TextView
            android:id="@+id/desc"
            android:layout_below="@+id/version"
            android:layout_marginTop="25dp"
            style="@style/MWidget.TextView.BlackSummary"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:singleLine="false"
            android:lineSpacingExtra="1.5dp"
            android:textSize="@dimen/text_size_20px"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <View
            style="@style/MWidget.DivideHorizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/divide_size"></View>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_left_margin_16dp"
            android:paddingTop="@dimen/default_left_margin_16dp">

            <TextView
                style="@style/MWidget.TextView.DeviceTitle"
                android:text="@string/mine_about_compay" />

            <TextView
                style="@style/MWidget.TextView.BlackSummary"
                android:text="@string/mine_about_engilsh" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/layout_toolbar_custom_mine"></include>
</RelativeLayout>